# sitka-spruce

./: .gitignore  LICENSE  README.md  pyproject.toml
sitka_spruce/: __init__.py  app.py  data.py  dimreduce.py  gui_utils.py  hdatatree.py  plot1dpanel.py  plot2dpanel.py  sitka.py  tablepanel.py
